Updated with simple styling and some text

--- a/index.html
+++ b/index.html
@@ -1,6 +1,105 @@
-<h1>LBRL</h1>
+<!--
+	Temp site for LBRL.org
+-->
 
-<ul>
-  <li><a href="mailto:support@lbrl.org">Send oss epost</a></li>
-  <li><a href="http://twitter.com/@rubix">Følg Ruben på Twitter</a></li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="author" content="Ruben Leikarnes">
+	<meta name="description" content="">
+
+	<title>LBRL.org</title>
+
+	<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:300,400,700' rel='stylesheet' type='text/css'>
+
+	<style>
+		html {
+			-webkit-box-sizing: border-box; 
+			-moz-box-sizing: border-box; 
+			box-sizing: border-box;
+		}
+
+		*, *:before, *:after {
+			box-sizing: inherit;
+		}
+
+		body {
+			font-size: 16px;
+			font-family: 'Josefin Sans', sans-serif;
+			font-weight: 300;
+			line-height: 1.4;
+			padding: 0;
+			margin: 22px 0 0;
+		}
+
+		h1 {
+			font-weight: 300;
+		}
+
+		h1, h2, h3, h4, h5, h6,
+		p, ul, ol, pre, img, table {
+			margin-top: 0;
+			margin-bottom: 22px;
+		}
+
+		a, 
+		a:visited {
+			color: #d5353d;
+			text-decoration: none;
+		}
+		
+		a:hover,
+		a:active {
+			background: #d5353d;
+			color: #fff;
+		}
+
+		.island {
+			width: 30rem;
+			margin-left: auto;
+			margin-right: auto;
+			padding: 22px 22px 1px;
+		}
+		
+		.content-brand {
+			background: #d5353d;
+			color: #fff;
+		}
+
+		.content-main {
+			background: #fafafa;
+		}
+
+		.content-footer {
+			background: #f5f5f5;
+		}
+
+		.header h1 {
+			margin-bottom: 15px;
+			text-align: center;
+		}
+	</style>
+</head>
+<body>
+	<div class="island content-brand header">
+		<h1>LBRL</h1>
+	</div>
+	<div class="island content-main">
+		<p>LBRL er et enkeltpersonsforetak som ble startet sent i 2012, som tilbyr tjenester som webutvikling, webdesign og generelle IT tjenester. Firmaet drives av Ruben Leikarnes som for tiden tar en bachelorgrad i IT med spesialisering i E-business ved <a href="http://nith.no">Westerdals - Oslo School of Art, Communication and Technology</a> (tidligere NITH).</p>
+
+		<p>Vi har over 10 års erfaring innen frontend-utvikling og spesialiserer oss på CSS effektivitet og arktitektur (vi foretrekker SASS). I tillegg har vi erfaring med systemer som Wordpress, Joomla, Jekyll og Middleman.</p>
+
+		<ul>
+			<li><a href="mailto:support@lbrl.org">Send oss epost</a></li>
+			<li><a href="http://no.linkedin.com/in/rubenleikarnes">Linkedin profil</a></li>
+			<li><a href="http://twitter.com/@rubix">Følg Ruben på Twitter</a></li>
+		</ul>
+	</div>
+	<div class="island content-footer">
+		<p>Ruben Leikarnes</p>
+	</div>
+</body>
+</html>
