--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
 			padding: 0;
 			margin: 22px 0 0;
 		}
+		
+		@media screen and (max-width: 30em) {
+			body {
+				margin-top: 0;	
+			}
+		}
 
 		h1 {
 			font-weight: 300;
@@ -58,7 +64,7 @@
 		}
 
 		.island {
-			width: 30rem;
+			max-width: 30rem;
 			margin-left: auto;
 			margin-right: auto;
 			padding: 22px 22px 1px;
