--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<title>LBRL.org</title>
 
 	<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:300,400,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<div class="island content-brand header">
