Fixed thanks link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<textarea name="message" rows="5" id="senderContent"></textarea>    
 
 			<input type="hidden" name="_subject" value="LBLR oppdrag" />
-			<input type="hidden" name="_next" value="/thanks.html" />
+			<input type="hidden" name="_next" value="http://lbrl.org/thanks.html" />
 
 			<button type="submit" class="btn btn-positive pull-right">Send</button>
 		</form>
