--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 	<meta name="author" content="Ruben Leikarnes">
 	<meta name="description" content="">
 
+	<link rel="dns-prefetch" href="//google-analytics.com">
+	<link rel="dns-prefetch" href="//fonts.googleapis.com">
+
 	<title>LBRL.org</title>
 
-	<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:300,400,700' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Josefin+Sans:300,400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -25,14 +28,9 @@
 
 		<p>Vi har over 10 års erfaring innen frontend-utvikling og spesialiserer oss på CSS effektivitet og arktitektur (vi foretrekker SASS). I tillegg har vi erfaring med systemer som Wordpress, Joomla, Jekyll og Middleman.</p>
 	</div>
-	<div class="island content-sec">
-		<ul>
-			<li><a href="mailto:support@lbrl.org">Send oss epost</a></li>
-			<li><a href="http://no.linkedin.com/in/rubenleikarnes">Linkedin profil</a></li>
-			<li><a href="http://twitter.com/@rubix">Følg Ruben på Twitter</a></li>
-		</ul>
-	</div>
-	<div class="island content-main clearfix">
+	<div class="island content-sec clearfix">
+		<h2>Send en melding</h2>
+
 		<form method="POST" action="http://forms.brace.io/support@lbrl.org">
 
 			<label for="senderName">Navn</label>
@@ -52,6 +50,21 @@
 	</div>
 	<div class="island content-footer">
 		<p>Ruben Leikarnes</p>
+		<ul>
+			<li><a href="mailto:support@lbrl.org">Send oss epost</a></li>
+			<li><a href="http://no.linkedin.com/in/rubenleikarnes">Linkedin profil</a></li>
+			<li><a href="http://twitter.com/@rubix">Følg Ruben på Twitter</a></li>
+		</ul>
 	</div>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-13215930-7', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
 </body>
 </html>
