--- a/thanks.html
+++ b/thanks.html
@@ -11,10 +11,13 @@
 	<meta name="author" content="Ruben Leikarnes">
 	<meta name="description" content="">
 
+	<link rel="dns-prefetch" href="//google-analytics.com">
+	<link rel="dns-prefetch" href="//fonts.googleapis.com">
+
 	<title>LBRL.org</title>
 
-	<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:300,400,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="/style.css">
+	<link href='//fonts.googleapis.com/css?family=Josefin+Sans:300,400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<div class="island content-brand header">
@@ -29,5 +32,15 @@
 	<div class="island content-footer">
 		<p>Ruben Leikarnes</p>
 	</div>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-13215930-7', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
 </body>
 </html>
