--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<!--
-	Temp site for LBRL.org
--->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,13 +30,13 @@
 		<form method="POST" action="http://forms.brace.io/support@lbrl.org">
 
 			<label for="senderName">Navn</label>
-			<input name="name" type="name" id="senderName" placeholder="Ola Nordmann">
+			<input name="name" type="name" id="senderName" placeholder="Ola Nordmann" required>
 
 			<label for="senderEmail">E-post adresse</label>
-			<input name="_replyto" type="email" id="senderEmail" placeholder="ola.nordmann@epost.no">
+			<input name="_replyto" type="email" id="senderEmail" placeholder="ola.nordmann@epost.no" required>
 
 			<label for="senderContent">Forespørsel</label>
-			<textarea name="message" rows="5" id="senderContent"></textarea>    
+			<textarea name="message" rows="5" id="senderContent" required></textarea>    
 
 			<input type="hidden" name="_subject" value="LBLR oppdrag" />
 			<input type="hidden" name="_next" value="http://lbrl.org/thanks.html" />
@@ -64,7 +60,6 @@
 
 	  ga('create', 'UA-13215930-7', 'auto');
 	  ga('send', 'pageview');
-
 	</script>
 </body>
 </html>
