Removed lots of unused pages, "new" singlepage layout
- removed blog
- removed about
- made the header full width
- removed navigation
- footer links open i new tab
- small wording fixes
- updates plugins and jekyll
- removed travis

--- a/pages/thanks.html
+++ b/pages/thanks.html
@@ -5,6 +5,6 @@ permalink: /thanks/
 ---
 
 <h2>Takk!</h2>
-<p>Takk for at du sendte oss en forespørsel, vi ser frem til å ta kontakt med deg. Forventet besvarelse skjer normalt sett innen 48 timer.</p>
+<p>Takk for at du sendte oss en forespørsel, vi ser frem til å ha kontakt med deg. Forventet besvarelse skjer normalt innen 48 timer.</p>
 
 <p><a href="/">Tilbake til forsiden</a></p>
