--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,5 @@ title: Kontakt
 permalink: /
 ---
 <div class="clearfix">
-	<h2>Send en melding</h2>
-
-	{% include contact-form.html %}
+	<h1>Hello world!</h1>
 </div>
